--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,6 @@ jobs:
       
       - name: Commit and push if changes
         run: |
-          git add -A
+          CURRENT_YEAR=$(date +%Y)
+          git add "data/d3_batting_${CURRENT_YEAR}.csv" "data/d3_pitching_${CURRENT_YEAR}.csv"
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update baseball statistics data [automated]" && git push)
