--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
       
       - name: Install R dependencies
         run: |
-          Rscript -e 'install.packages(c("dplyr", "purrr", "cli", "remotes"))'
-          Rscript -e 'remotes::install_github("BillPetti/baseballr", dependencies = TRUE)'
-          Rscript -e 'remotes::install_github("robert-frey/collegebaseball", dependencies = TRUE)'
+          Rscript -e 'install.packages(c("dplyr", "purrr", "cli", "remotes", "devtools))'
+          Rscript -e 'devtools::install_github("BillPetti/baseballr", dependencies = TRUE)'
+          Rscript -e 'devtools::install_github("robert-frey/collegebaseball", dependencies = TRUE)'
       
       - name: Create data directory
         run: mkdir -p data
