--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       
       - name: Install R dependencies
         run: |
-          Rscript -e 'install.packages(c("dplyr", "purrr", "cli", "remotes", "devtools))'
+          Rscript -e 'install.packages(c("dplyr", "purrr", "cli", "remotes", "devtools"))'
           Rscript -e 'devtools::install_github("BillPetti/baseballr", dependencies = TRUE)'
           Rscript -e 'devtools::install_github("robert-frey/collegebaseball", dependencies = TRUE)'
       
