--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,3 +1,10 @@
+#streamlit>=1.22.0
+#pandas>=1.5.0
+#numpy>=1.23.0
 streamlit>=1.22.0
 pandas>=1.5.0
 numpy>=1.23.0
+polars>=0.19.0
+requests>=2.28.0
+beautifulsoup4>=4.11.0
+lxml>=4.9.0
